tests/ui/feature-gates/feature-gate-supertrait-auto-impl.stderr
error[E0658]: feature is under construction
  --> $DIR/feature-gate-supertrait-auto-impl.rs:3:5
   |
LL |     auto impl Supertrait;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #99999 <https://github.com/rust-lang/rust/issues/99999> for more information
   = help: add `#![feature(supertrait_auto_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: feature is under construction
  --> $DIR/feature-gate-supertrait-auto-impl.rs:3:5
   |
LL |     auto impl Supertrait;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #99999 <https://github.com/rust-lang/rust/issues/99999> for more information
   = help: add `#![feature(supertrait_auto_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0658]: feature is under construction
  --> $DIR/feature-gate-supertrait-auto-impl.rs:3:5
   |
LL |     auto impl Supertrait;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #99999 <https://github.com/rust-lang/rust/issues/99999> for more information
   = help: add `#![feature(supertrait_auto_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
