tests/ui/feature-gates/feature-gate-supertrait-auto-impl.rs
trait Supertrait {}
trait Subtrait: Supertrait {
    auto impl Supertrait;
    //~^ ERROR feature is under construction
}

fn main() {}
